WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48596
HTML5 Conformance Test failure: approved/xhtml5/object_border_pixel.xhtml
https://bugs.webkit.org/show_bug.cgi?id=48596
Summary
HTML5 Conformance Test failure: approved/xhtml5/object_border_pixel.xhtml
David Kilzer (:ddkilzer)
Reported
2010-10-28 16:51:40 PDT
The approved/xhtml5/object_border_pixel.xhtml test fails with WebKit nightly build
r70732
run in Safari 5.0.x.
Attachments
Proposed Patch
(9.41 KB, patch)
2010-12-15 23:45 PST
,
Julie Jeongeun Kim
darin
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julie Jeongeun Kim
Comment 1
2010-12-15 23:45:27 PST
Created
attachment 76740
[details]
Proposed Patch I uploaded the proposed patch. Please look into it. Thanks.
WebKit Commit Bot
Comment 2
2011-01-03 18:20:00 PST
Comment on
attachment 76740
[details]
Proposed Patch Rejecting
attachment 76740
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-sf-cq', 'apply-attachment', '--no-update', '--non-interactive', 76740]" exit_code: 2 Last 500 characters of output: ===================================== |--- WebKit-luna/LayoutTests/ChangeLog (revision 74175) |+++ WebKit-luna/LayoutTests/ChangeLog (working copy) -------------------------- No file to patch. Skipping patch. 1 out of 1 hunk ignored patching file WebKit-luna/LayoutTests/fast/html/object-border-expected.txt patching file WebKit-luna/LayoutTests/fast/html/object-border.html Failed to run "[u'/Projects/CommitQueue/Tools/Scripts/svn-apply', u'--reviewer', u'Darin Adler', u'--force']" exit_code: 1 Full output:
http://queues.webkit.org/results/7325353
David Kilzer (:ddkilzer)
Comment 3
2011-01-03 18:41:05 PST
Taking this bug to commit. In the future, please use Tools/Scripts/svn-create-patch to make your patches before uploading them.
Eric Seidel (no email)
Comment 4
2011-01-03 18:57:09 PST
Or webkit-patch upload. :) Since that does all the dealing-with-bugs magic.
David Kilzer (:ddkilzer)
Comment 5
2011-01-03 22:20:49 PST
Committed
r74957
: <
http://trac.webkit.org/changeset/74957
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug