WebCore: HTML5 Conformance Test failure: approved/xhtml5/object_border_pixel.xhtml https://bugs.webkit.org/show_bug.cgi?id=48596

Patch by Julie-Jeongeun-Kim <Jeongeun.Kim@obigo.com> on 2011-01-03
Reviewed by Darin Adler.

border attribute was not parsed in HTMLObjectElement.
I added code for it as HTMLImageElement handled.

new test:fast/html/object-border.html

* html/HTMLObjectElement.cpp:
(WebCore::HTMLObjectElement::parseMappedAttribute):

LayoutTests: HTML5 Conformance Test failure: approved/xhtml5/object_border_pixel.xhtml
https://bugs.webkit.org/show_bug.cgi?id=48596

Patch by Julie-Jeongeun-Kim <Jeongeun.Kim@obigo.com> on 2011-01-03
Reviewed by Darin Adler.

* fast/html/object-border-expected.txt: Added.
* fast/html/object-border.html: Added.
* fast/html/resources/images/blue-border.png: Added.
* fast/html/resources/images/blue.png: Added.

Canonical link: https://commits.webkit.org/65296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74957 268f45cc-cd09-0410-ab3c-d52691b4dbfc